[fix]: Arreglo de codigo para pruebas SonarQube, implementacion de CORS y carpeta y ejemplos de datos quemados para pruebas en swagger. Tambien cambios en toda la documentacion y codigo para dejarlo todo en ingles y extender las desscripciones de swagger.