@@ -12,7 +12,6 @@ import org.springframework.stereotype.Component;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -32,7 +31,7 @@ public class AcademicServiceAdapter implements AcademicServicePort {
         List<String> atRiskSubjects = subjects.stream()
                 .filter(SubjectPerformanceDto::isAtRisk)
                 .map(SubjectPerformanceDto::getSubjectName)
-                .collect(Collectors.toList());
+                .toList();
 
         List<SubjectRiskData> subjectRisks = subjects.stream()
                 .filter(SubjectPerformanceDto::isAtRisk)
@@ -41,7 +40,7 @@ public class AcademicServiceAdapter implements AcademicServicePort {
                         .name(s.getSubjectName())
                         .projectedGrade(resolveProjectedGrade(s))
                         .build())
-                .collect(Collectors.toList());
+                .toList();
 
         return Optional.of(AcademicPerformanceData.builder()
                 .userId(dto.getUserId())
