@@ -10,7 +10,6 @@ import org.springframework.stereotype.Component;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -27,7 +26,7 @@ public class PlanningServiceAdapter implements PlanningServicePort {
                 ? Collections.emptyList()
                 : dto.getSuggestedTasks().stream()
                         .map(t -> t.getTitle())
-                        .collect(Collectors.toList());
+                        .toList();
 
         return Optional.of(TodayPlanData.builder()
                 .userId(dto.getUserId())
